Initial version of process_subobligation_summary

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,4 @@ export(process_bilateral_oblg_acc_lines)
 export(process_phoenix_oblg_acc_lines)
 export(process_phoenix_pipeline)
 export(process_phoenix_transaction)
+export(process_subobligation_summary)
