--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,3 +7,4 @@ export(clean_phoenix_open_commitments)
 export(clean_phoenix_pipeline)
 export(clean_phoenix_transaction)
 export(clean_subobligation_summary)
+export(create_history_open_commitments)
