--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,4 +7,5 @@ export(clean_phoenix_open_commitments)
 export(clean_phoenix_pipeline)
 export(clean_phoenix_transaction)
 export(clean_subobligation_summary)
+export(create_history_bi_oblg_acc_lines)
 export(create_history_open_commitments)
