Added function for creating cumulative column to phoenix transaction dataset

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,3 +10,4 @@ export(clean_phoenix_transaction)
 export(clean_subobligation_summary)
 export(create_history_bi_oblg_acc_lines)
 export(create_history_open_commitments)
+export(create_phoenix_transaction_cumulative)
