--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,9 @@ export(clean_phoenix_open_commitments)
 export(clean_phoenix_pipeline)
 export(clean_phoenix_transaction)
 export(clean_subobligation_summary)
+export(create_bi_oblg_acc_lines_updated_all)
+export(create_bi_oblg_acc_lines_updated_mech)
+export(create_bi_oblg_acc_lines_updated_no_mech)
 export(create_history_bi_oblg_acc_lines)
 export(create_history_open_commitments)
 export(create_phoenix_transaction_cumulative)
