--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,3 +12,4 @@ export(create_bi_oblg_acc_lines_updated_all)
 export(create_bi_oblg_acc_lines_updated_mech)
 export(create_bi_oblg_acc_lines_updated_no_mech)
 export(create_history_open_commitments)
+export(create_phoenix_transaction_cumulative)
