--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,10 @@ Package: blingr
 Title: Processes Phoenix and supporting data
 Version: 0.0.0.9000
 Authors@R: 
-    person("Kirstin"", "Lyon"", , "kirstin.c.lyon@gmail.com", role = c("aut", "cre"),
+    person("Kirstin", "Lyon", , "kirstin.c.lyon@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: Convenient functions for processing data available from Phoenix as well as helper files created by the USAID Mozambique Budget teams. 
-License: `use_mit_license()`
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
